2009-11-18  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Clarify and simplify the legal section in the overview documentation,
        after review with our legal team.

        * docs/qtwebkit.qdoc:

2009-11-18  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Add QtLauncher support for opening links in the default browser

        This can be triggered by either the context menu or by clicking a link
        while holding down the Alt key. Opening a link in a new windows is
        triggered by holding down Shift.

        * QtLauncher/main.cpp:

2009-11-17  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QGLLauncher does not support drag&drop of local files
        https://bugs.webkit.org/show_bug.cgi?id=31057

        Enable accepting files in QGraphicsWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::QGraphicsWebView):
        (QGraphicsWebView::dragEnterEvent):

2009-11-17  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] better test coverage for ErrorPageExtension
        https://bugs.webkit.org/show_bug.cgi?id=31583

        Improved the coverage of current ErrorPageExtension tests by
        adding autotests involving frameset and iframes.

        * tests/qwebpage/tst_qwebpage.cpp:
        (ErrorPage::extension): Make the ErrorPageExtension
        to work for all frames, not only the main frame.
        (tst_QWebPage::errorPageExtension): Stop using
        the 'frameset.html' resouce in this method since
        an autotest specific for frameset's is being added.
        (tst_QWebPage::errorPageExtensionInIFrames): Added.
        (tst_QWebPage::errorPageExtensionInFrameset): Added.

2009-11-16  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        API documentation fixes.
